new homepage content

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -86,12 +86,11 @@
           <div class="row g-0">
             <div class="col-12 g-0">
               <div class="card-body p-0">
-                <img src="images/shows/timetogetdown-latin.png" class="img-fluid float-lg-start pe-3 mb-3 mb-lg-0" alt="Pattern Radio live"/>
-                <h3>Time To Get Down</h3>
-                <h5>Música Disco Latina</h5>
-                <p class="card-text">Disco and latin music go hand in hand, its all about letting it go on the dance floor! Tune in for the latest instalment of the monthly show presented by Alex Bowen. This month playing a selection of the finest latin infused disco tracks from 1970s to modern day to get your weekend up and running in suitable fashion.</p>
+                <img src="images/shows/detroit-show-small.png" class="img-fluid float-lg-start pe-3 mb-3 mb-lg-0" alt="Pattern Radio live"/>
+                <h3>Saturday Night Electronics</h3>
+                <p class="card-text">Ambient Berlin, Sem Titulo, Rhythm Retreat and exclusive mixes from Dave Rogers and Alex Bowen. 5 new shows means 5 hours plus of music spanning ambient, house, techno and electro this Saturday for your listening pleasure.</p>
 
-                <p class="card-text">6-7pm Friday 20th October</p>
+                <p class="card-text">Starting 6pm UTC Saturday 28th October</p>
                 {# <p class="card-text">We are very excited to announce that Tropical Disco will be streaming live from Kanteena in Lancaster this Friday on Pattern Radio.</p>
                 <p class="card-text">Chris Holt will be joined by Murph and Subtrak DJs bringing Tropical Disco's sunshine sounds to Pattern Radio's webwaves live for 4 hours. Tropical Disco has been a force of nature with it's monthly shows on Pattern Radio and this is sure to take things up a notch.</p>
                 <p class="card-text">Some of the broadcast will be available for playback, but not all - so miss at your peril!</p> #}
