hompage static content update

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -86,11 +86,11 @@
           <div class="row g-0">
             <div class="col-12 g-0">
               <div class="card-body p-0">
-                <img src="images/shows/detroit-show-small.png" class="img-fluid float-lg-start pe-3 mb-3 mb-lg-0" alt="Pattern Radio live"/>
-                <h3>Saturday Night Electronics</h3>
-                <p class="card-text">Ambient Berlin, Sem Titulo, Rhythm Retreat and exclusive mixes from Dave Rogers and Alex Bowen. 5 new shows means 5 hours plus of music spanning ambient, house, techno and electro this Saturday for your listening pleasure.</p>
-
-                <p class="card-text">Starting 6pm UTC Saturday 28th October</p>
+                <img src="images/shows/pr-sunday-session-2-small.png" class="img-fluid float-lg-start pe-3 mb-3 mb-lg-0" alt="Sunday Session Social"/>
+                <h3>Sunday Session Social</h3>
+                <p class="card-text">Regular show of Sunday vibes - jazz, world music, beats and soul - this time with a twist. Will be streaming live on YouTube with chat, music, activities and generally hanging out.</p> 
+                <p class="card-text">Everyone and all invited for this adhoc, freestyle 100% live session.</p>
+                <p class="card-text">Starting 4pm UTC Sunday 5th November</p>
                 {# <p class="card-text">We are very excited to announce that Tropical Disco will be streaming live from Kanteena in Lancaster this Friday on Pattern Radio.</p>
                 <p class="card-text">Chris Holt will be joined by Murph and Subtrak DJs bringing Tropical Disco's sunshine sounds to Pattern Radio's webwaves live for 4 hours. Tropical Disco has been a force of nature with it's monthly shows on Pattern Radio and this is sure to take things up a notch.</p>
                 <p class="card-text">Some of the broadcast will be available for playback, but not all - so miss at your peril!</p> #}
