new branding first iteration

--- a/src/css/social-toolbar.scss
+++ b/src/css/social-toolbar.scss
@@ -11,10 +11,10 @@
       }
 
       a {
-        color: #aaa;
+        color: #1c1c1c;
 
         &:hover {
-          color: #F49D37;
+          color: #E85C41;
         }
       }
     }
