--- a/src/views/partials/_stream.njk
+++ b/src/views/partials/_stream.njk
@@ -6,7 +6,7 @@
     </span>
   </div>
 
-  <p data-stream-target="track" class="mb-0">Back at 10am (GMT)</p>
+  <p data-stream-target="track" class="ms-2 mb-0">Back at 10am (GMT)</p>
 </div>
 
 
