--- a/src/views/partials/filters/_tag.njk
+++ b/src/views/partials/filters/_tag.njk
@@ -1,6 +1,6 @@
   <template id="tag">
     <li data-target="tags.item" data-action="click->filters#updateSelected" style="cursor:pointer" class="tag">
       <span>x</span>
-      <button></button>
+      <button class="mb-2 mb-md-0"></button>
     </li>
   </template>
