--- a/src/views/show.njk
+++ b/src/views/show.njk
@@ -2,52 +2,45 @@
 
 {% block header %}
 
-  <div data-controller="stream status" data-action="stream:update->status#update">
-    <div class="container-fluid content-header py-3">
-      <div class="d-md-flex">
-        <div class="d-flex flex-md-grow-1">
-          {% include "partials/_stream.njk" %}
-        </div>
-        <div class="d-flex pt-3 p-md-0">
-          <a class="nav-link toggle-link" data-bs-toggle="collapse" href="#stream-detail" data-action="click->status#detail" role="button" aria-expanded="false" aria-controls="collapseexample">
+  {% include "partials/filters/_tag.njk" %}
 
-            <span class="filters-selected-status" data-filters-target="status"></span>
-            <span class="toggle-link__icon"></span>
-            <p data-status-target="title" class="mb-0">Currently offline</p>
-          </a>
-        </div>
-      </div>
+  <div class="container-fluid content-header" data-controller="filters" data-filters-target-value="episodes" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
 
-      <div class="collapse toggle-panel pt-3" id="stream-detail">
-        <div class="row">
-          <div class="col-6">
-            <h5 class="highlight">Now</h5>
-            <img src="" data-status-target="currentimage" class="float-start pe-2 pb-1"/>
-            <h5 data-status-target="currenttitle"></h5>
-            <span data-status-target="currentelapsed"></span>
-          </div>
+    <div class="collapse" id="filter-controls" data-filters-target="panel">
+      <div class="filters">
+        <div class="d-md-flex flex-row">
+          <div class="filters-header">
 
-          <div class="col-6">
-            <h5>Next</h5>
-            <img src="" data-status-target="nextimage" class="float-start pe-2 pb-1"/>
-            <span data-status-target="nexttitle"></span>
+            <ul class="nav nav-fill" data-filters-target="nav"></ul>
+
+            <div class="groups">
+              <ul data-filters-target="groups"></ul>
+            </div>
+
+            <div class="selected" data-filters-target="selected">
+              <p class="filters-selected--none">No preferences selected</p>
+
+              <div class="d-flex">
+                <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
+              </div>
+            </div>
           </div>
         </div>
-
       </div>
     </div>
+
   </div>
 {% endblock %}
 
 {% block content %}
-  <div data-controller="episode" data-show-id-value="{{ item.id }}">
+  <div data-show-id-value="{{ item.id }}">
     <div class="container-fluid">
-      <h5>&gt;&gt;&gt; Click play icon above to start stream</h5>
-      <p class="lead mt-3 mb-4">Musical selections and discovery streamed for enlightened listening.</p>
+      {# <h5>&gt;&gt;&gt; Click play icon above to start stream</h5>
+      <p class="lead mt-3 mb-4">Musical selections and discovery streamed for enlightened listening.</p> #}
 
-      <div class="row shows pb-4">
-        <div class="col-12 col-md-6 card show">
-          <h2 class="mb-3">{{ item.title }}</h2>
+      <div class="row episodes pb-4">
+        <div class="col-12 col-md-6 card episode">
+          <h3 class="mb-3">{{ item.title }}</h3>
           <div class="row g-0">
             <div class="col-md-12">
               <img src="/{{ item.image }}" class="img-fluid float-start pe-3 pb-1" alt="{{ item.name }}">
@@ -62,30 +55,29 @@
       </div>
     </div>
 
-    <div class="episodes" id="episodes" data-action="episodes:loaded->pagination#update pagination:paginate->episodes#paginate" data-controller="episodes pagination" data-episodes-show-item-template-id="episode" data-episodes-tag-item-template-id="tag" data-episodes-items-value="12" data-episodes-query-value="{{ item.title }}" data-episodes-types-value="true" data-episodes-search-value="true" data-episodes-filters-value="true">
+    <div class="episodes" id="episodes" data-action="episodes:loaded->pagination#update pagination:paginate->episodes#paginate" data-controller="episodes pagination" data-episodes-show-item-template-id="episode-standard" data-episodes-tag-item-template-id="tag" data-episodes-items-value="12" data-episodes-query-value="{{ item.title }}" data-episodes-types-value="true" data-episodes-search-value="true">
 
       <div class="container-fluid pb-2">
         <div class="heading d-flex" data-episodes-target="heading">
-          <h2>Shows Available For Playback</h2>
-          <button data-action="click->episodes#clearsearch" class="d-none">clear</button>
+{% include "templates/episodes/_title.njk" %}
         </div>
         <div class="pagination d-flex flex-wrap flex-md-nowrap">
           <div data-pagination-target="stats" class="flex-grow-1"></div>
           <div data-pagination-target="control" data-action="click->pagination#paginate"></div>
         </div>
-        <div class="row shows" data-episodes-target="items"></div>
+        <div class="row episodes" data-episodes-target="items"></div>
         <a class="nav-link" href="/shows" data-controller="navigation" data-action="click->navigation#navigate">Back to all shows</a>
       </div>
 
     </div>
 
-    {% include "templates/_episode.njk" %}
+    {% include "templates/episode/_standard.njk" %}
 
     <div class="container-fluid mt-4">
       <h2>Relevant Reading</h2>
       {% set query = [item.id, item.tags] | join(",") %}
-      <div class="row shows pb-4" data-controller="blogs" data-blogs-target="items" data-blogs-overidden-value="true" data-blogs-show-item-template-id="blog" data-blogs-offset-value="0" data-blogs-show-tags-value="true" data-blogs-items-value="12" data-blogs-query-value="{{ query }}" data-blogs-search-value="true">
-        {% include "templates/_blog.njk" %}
+      <div class="row episodes pb-4" data-controller="posts" data-posts-target="items" data-posts-overidden-value="true" data-posts-show-item-template-id="post" data-posts-offset-value="0" data-posts-show-tags-value="true" data-posts-items-value="12" data-posts-query-value="{{ query }}" data-posts-search-value="true">
+        {% include "templates/_post.njk" %}
       </div>
     </div>
   </div>
