--- a/src/views/templates/_post.njk
+++ b/src/views/templates/_post.njk
@@ -1,9 +1,9 @@
-<template id="blog">
+<template id="post">
   <div class="col-12 card blog-post mb-4">
     <div class="card-body p-0">
       {# <h2 class="card-title" data-blog-target="title"></h2> #}
       
-      <div data-blog-target="content" class="content"></div>
+      <div data-posts-target="content" class="content"></div>
 
       
     </div>
