--- a/src/views/templates/_schedule.njk
+++ b/src/views/templates/_schedule.njk
@@ -1,5 +1,5 @@
 <template id="schedule">
-  <div class="col-6 col-lg-4 col-xl-2 card show">
+  <div class="col-6 col-md-4 col-lg-3 col-xl-2 card episode">
 
     <img src="images/new/online2.jpg" alt="...">
 
