--- a/src/views/browse.njk
+++ b/src/views/browse.njk
@@ -3,90 +3,61 @@
 {% block header %}
   {% include "partials/filters/_tag.njk" %}
 
-  <div data-controller="stream">
-    <div class="container-fluid content-header py-3 sub-menu" data-controller="filters" data-filters-target-value="episodes" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
-      <div class="d-md-flex">
-        <div class="d-flex flex-md-grow-1">
-          {% include "partials/_stream.njk" %}
-        </div>
+  <div class="container-fluid content-header" data-filters-target-value="episodes" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
 
-        <div class="d-flex pt-3 p-md-0">
-          <a class="nav-link toggle-link fs-6 pe-3 flex-grow-1" data-bs-toggle="collapse" href="#filter-controls" role="button" aria-expanded="false" aria-controls="collapseexample">
-            Your Preferences
-          <span class="filters-selected-status" data-filters-target="status"></span>
-            <span class="toggle-link__icon"></span>
-          </a>
-        </div>
+    <div class="collapse" id="filter-controls" data-filters-target="panel">
+      <div class="filters">
+        <div class="d-md-flex flex-row">
+          <div class="filters-header">
 
-        <div class="d-flex pt-3 p-md-0">
-          <form class="input-group input-group-sm" data-controller="search" id="search" role="search" data-action="submit->search#request">
-            <input type="text" class="form-control" placeholder="Search Shows" aria-label="Search Shows" aria-describedby="button-addon2" data-search-target="query"></input>
-            <button class="btn btn-secondary" type="button" id="button-addon2" data-action="click->search#request">Go</button>
-          </form>
-        </div>
-      </div>
+            <ul class="nav nav-fill" data-filters-target="nav"></ul>
 
-      <div class="collapse toggle-panel pt-3" id="stream-detail">
-        <div class="row">
-          <div class="col-6">
-            <h5>Playing Now</h5>
-            <img src="" data-stream-target="currentimage" class="float-start pe-2 pb-1"/>
-            <h5 data-stream-target="currenttitle"></h5>
-            <span data-stream-target="currentelapsed"></span>
-          </div>
+            <div class="groups">
+              <ul data-filters-target="groups"></ul>
+            </div>
 
-          <div class="col-6">
-            <h5>Playing Next</h5>
+            <div class="selected" data-filters-target="selected">
+              <p class="filters-selected--none">No preferences selected</p>
 
-            <img src="" data-stream-target="nextimage" class="float-start pe-2 pb-1"/>
-            <span data-stream-target="nexttitle"></span>
-          </div>
-        </div>
-      </div>
-
-      <div class="collapse" id="filter-controls" data-filters-target="panel">
-        <div class="filters">
-          <div class="d-md-flex flex-row">
-            <div class="filters-header">
-
-              <ul class="nav nav-fill" data-filters-target="nav"></ul>
-
-              <div class="groups"><ul data-filters-target="groups"></ul></div>
-
-              <div class="selected" data-filters-target="selected">
-                <p class="filters-selected--none">No preferences selected</p>
-
-                <div class="d-flex">
-                  <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
-                </div>
+              <div class="d-flex">
+                <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
   </div>
 
 {% endblock %}
 
 {% block content %}
-  <div class="episodes" id="episodes" data-action="episodes:loaded->pagination#update pagination:paginate->episodes#paginate" data-controller="episodes pagination" data-episodes-show-item-template-id="episode" data-episodes-tag-item-template-id="tag" data-episodes-items-value="12" data-episodes-types-value="true" data-episodes-search-value="true" data-episodes-filters-value="true" data-episodes-show-tags-value="true">
 
-    <div class="container-fluid pb-2">
-      <h5>&gt;&gt;&gt; Click play icon above to start stream</h5>
-      <p class="lead mt-3 mb-4">Musical selections and discovery streamed for enlightened listening. You can curate your own content to suit your musical preferences using the drop down menu above.</p>
+  <div class="episodes" id="episodes" data-action="episodes:loaded->pagination#update pagination:paginate->episodes#paginate" data-controller="episodes pagination search" data-episodes-show-item-template-id="episode-standard" data-episodes-tag-item-template-id="tag" data-episodes-items-value="12" data-episodes-types-value="true" data-episodes-search-value="true" data-episodes-filters-value="true" data-episodes-show-tags-value="true">
 
-      <div class="heading d-flex" data-episodes-target="heading">
-        <h2>Shows Available For Playback</h2>
-        <button data-action="click->episodes#clearSearch" class="d-none">clear</button>
+    <div class="container-fluid">
+      <div class="row header" data-episodes-target="heading">
+        <div class="col-12 col-md-9">
+          {% include "templates/episodes/_title.njk" %}
+          {# <button data-action="click->episodes#clearSearch click->search#clear" class="d-none">clear</button> #}
+        </div>
+        <div class="col-12 col-md-3 mb-3 mb-md-0">
+          <form class="input-group input-group-sm" id="search" role="search" data-action="submit->search#request">
+            <input type="text" class="form-control" placeholder="search all shows" aria-label="search shows" aria-describedby="button-addon2" data-search-target="query"></input>
+            <button class="btn btn-secondary" type="button" id="button-addon2" data-action="click->search#request">Go</button>
+          </form>
+        </div>
       </div>
+
       <div class="pagination d-flex flex-wrap flex-md-nowrap">
         <div data-pagination-target="stats" class="flex-grow-1"></div>
         <div data-pagination-target="control" data-action="click->pagination#paginate"></div>
       </div>
-      <div class="row shows" data-episodes-target="items"></div>
+      
+      <div class="row episodes" data-episodes-target="items"></div>
     </div>
   </div>
 
-  {% include "templates/_episode.njk" %}
+  {% include "templates/episode/_standard.njk" %}
 {% endblock %}
