--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -4,71 +4,31 @@
 
   {% include "partials/filters/_tag.njk" %}
 
-  <div data-controller="stream status" data-action="stream:update->status#update">
-    <div class="container-fluid content-header py-3" data-controller="filters" data-filters-target-value="episodes" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
-      <div class="d-md-flex">
-        <div class="d-flex flex-md-grow-1">
-          {% include "partials/_stream.njk" %}
-        </div>
+  <div class="container-fluid content-header" data-controller="filters" data-filters-target-value="episodes" data-filters-selected-template-id="selected" data-filters-tag-item-template-id="tag">
 
-        <div class="d-flex pt-3 p-md-0">
-          <a class="nav-link toggle-link fs-6 pe-3 flexgrow-1" data-bs-toggle="collapse" href="#filter-controls" role="button" aria-expanded="false" aria-controls="collapseexample">
-            Your Preferences
-          <span class="filters-selected-status" data-filters-target="status"></span>
-            <span class="toggle-link__icon"></span>
-          </a>
-        </div>
+    <div class="collapse" id="filter-controls" data-filters-target="panel">
+      <div class="filters">
+        <div class="d-md-flex flex-row">
+          <div class="filters-header">
 
-        <div class="d-flex pt-3 p-md-0">
-          <a class="nav-link toggle-link" data-bs-toggle="collapse" href="#stream-detail" data-action="click->status#detail" role="button" aria-expanded="false" aria-controls="collapseexample">
-            <span class="filters-selected-status" data-filters-target="status"></span>
-            <span class="toggle-link__icon"></span>
-            <p data-status-target="title" class="mb-0">Currently offline</p>
-          </a>
-        </div>
-      </div>
+            <ul class="nav nav-fill" data-filters-target="nav"></ul>
 
-      <div class="collapse" id="filter-controls" data-filters-target="panel">
-        <div class="filters">
-          <div class="d-md-flex flex-row">
-            <div class="filters-header">
+            <div class="groups">
+              <ul data-filters-target="groups"></ul>
+            </div>
 
-              <ul class="nav nav-fill" data-filters-target="nav"></ul>
+            <div class="selected" data-filters-target="selected">
+              <p class="filters-selected--none">No preferences selected</p>
 
-              <div class="groups"><ul data-filters-target="groups"></ul></div>
-
-              <div class="selected" data-filters-target="selected">
-                <p class="filters-selected--none">No preferences selected</p>
-
-                <div class="d-flex">
-                  <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
-                </div>
+              <div class="d-flex">
+                <button class="btn btn--link filters-selected--clear d-none" data-action="click->filters#clear">clear preferences</button>
               </div>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="collapse toggle-panel pt-3" id="stream-detail">
-        <div class="row">
-          <div class="col-6">
-            <h5 class="highlight">Now</h5>
-
-            <img src="" data-status-target="currentimage" class="float-start pe-2 pb-1"/>
-            <h5 data-status-target="currenttitle"></h5>
-            <span data-status-target="currentelapsed"></span>
-          </div>
-
-          <div class="col-6">
-            <h5>Next</h5>
-
-            <img src="" data-status-target="nextimage" class="float-start pe-2 pb-1"/>
-            <span data-status-target="nexttitle"></span>
-          </div>
-        </div>
-
-      </div>
     </div>
+
   </div>
 
 {% endblock %}
@@ -77,67 +37,133 @@
 
   <div class="container-fluid">
 
-    <h5>&gt;&gt;&gt; Click play icon above to start stream</h5>
-    <p class="lead mt-3 mb-4">Musical selections and discovery streamed for enlightened listening. You can curate your own content to suit your musical preferences using the drop down menu above.</p>
+    <div class="row row__orange pb-3 pb-md-0">
 
-    <div class="row shows my-3">
-      <div class="col-12 col-lg-6">
-        <div class="card blog-post mb-3">
-          <div class="row g-0">
-            <div class="col-12 g-0">
-              <div class="card-body p-0">
-                <img src="images/shows/pr-sunday-session-2-small.png" class="img-fluid float-lg-start pe-3 mb-3 mb-lg-0" alt="Sunday Session Social"/>
-                <h3>Sunday Session Social</h3>
-                <p class="card-text">Regular show of Sunday vibes - jazz, world music, beats and soul - this time with a twist. Will be streaming live on YouTube with chat, music, activities and generally hanging out.</p> 
-                <p class="card-text">Everyone and all invited for this adhoc, freestyle 100% live session.</p>
-                <p class="card-text">Starting 4pm UTC Sunday 5th November</p>
-                {# <p class="card-text">We are very excited to announce that Tropical Disco will be streaming live from Kanteena in Lancaster this Friday on Pattern Radio.</p>
-                <p class="card-text">Chris Holt will be joined by Murph and Subtrak DJs bringing Tropical Disco's sunshine sounds to Pattern Radio's webwaves live for 4 hours. Tropical Disco has been a force of nature with it's monthly shows on Pattern Radio and this is sure to take things up a notch.</p>
-                <p class="card-text">Some of the broadcast will be available for playback, but not all - so miss at your peril!</p> #}
-                {# <p class="card-text">
-                  <small class="text-body-secondary">Details on how you can access channels will be made available nearer the time.</small>
-                </p> #}
+      <div class="col-12 col-xl-4 pb-4">
+        <div class="d-flex flex-column">
+          <div class="flex-fill">
+            <h1 style="color:#e8d7b9;">Musical selections and discovery for enlightened listening</h1>
+          </div>
+
+          <div class="flex-fill" style="background-color:#f2f2f2;padding:20px;">
+            <h4>Now Streaming</h4>
+            <div data-controller="stream" data-action="stream:update->status#update">
+              {% include "partials/_stream.njk" %}
+            </div>
+
+            <div class="row pt-3">
+              <div class="col col-md-6">
+                <a href="#upcoming-shows" class="nav-link py-2 py-md-0" style="color:#1c1c1c;">Coming Soon</a>
+                <a data-controller="navigation" data-action="click->navigation#navigate" class="nav-link pb-2 pb-md-0" href="/browse" style="color:#1c1c1c;">Search Shows</a>
+              </div>
+              <div class="col col-md-6">
+                <div class="social-toolbar">
+                  <ul class="list-group list-group-horizontal d-flex align-items-baseline">
+                    <li class="list-group-item">
+                      <a href="https://www.facebook.com/groups/patternradio" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-{{ social.channel }}" viewBox="0 0 16 16">
+                          <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="list-group-item">
+                      <a href="https://www.instagram.com/patternradio_pt/" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                          <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="list-group-item">
+                      <a href="https://www.mixcloud.com/patternradio/" target="_blank">
+                        <svg fill="currentcolor" width="24" height="24" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                          <title>Mixcloud icon</title><path d="M21.95 19.062c-.154 0-.31-.045-.445-.135-.369-.25-.465-.75-.225-1.11.738-1.094 1.125-2.381 1.125-3.719s-.387-2.625-1.125-3.721c-.249-.368-.145-.866.216-1.106.375-.249.87-.146 1.108.214.917 1.365 1.396 2.97 1.396 4.62 0 1.648-.479 3.254-1.396 4.619-.135.239-.39.359-.645.359l-.009-.021zM19.66 17.768c-.153 0-.308-.045-.445-.139-.369-.239-.463-.734-.215-1.094.489-.721.747-1.545.747-2.43 0-.855-.258-1.695-.747-2.431-.248-.36-.154-.854.215-1.095s.857-.15 1.106.225c.669.99 1.021 2.145 1.021 3.314 0 1.201-.352 2.34-1.021 3.315-.146.24-.406.36-.661.36v-.025zm-3.73-7.153c-.314-3.197-3.016-5.699-6.3-5.699-2.721 0-5.13 1.748-5.995 4.283C1.588 9.501 0 11.269 0 13.4c0 2.344 1.912 4.254 4.26 4.254h10.908c1.964 0 3.566-1.594 3.566-3.557 0-1.706-1.2-3.129-2.805-3.48v-.002zm-.762 5.446H4.263c-1.466 0-2.669-1.191-2.669-2.658 0-1.465 1.193-2.658 2.669-2.658.71 0 1.381.285 1.886.781.3.314.811.314 1.125 0 .3-.301.3-.811 0-1.125-.555-.542-1.231-.931-1.965-1.111.75-1.665 2.43-2.774 4.305-2.774 2.609 0 4.74 2.129 4.74 4.738 0 .512-.075 1.006-.24 1.486-.135.42.09.869.51 1.02.074.03.165.045.24.045.33 0 .645-.211.75-.54.105-.315.18-.63.225-.96.734.285 1.26 1.005 1.26 1.83 0 1.096-.885 1.979-1.965 1.979l.034-.053z"/></svg>
+                      </a>
+                    </li>
+
+                    <li class="list-group-item">
+                      <a href="https://medium.com/@patternradio" target="_blank">
+                        <svg fill="currentcolor" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M13 12C13 15.3137 10.3137 18 7 18C3.68629 18 1 15.3137 1 12C1 8.68629 3.68629 6 7 6C10.3137 6 13 8.68629 13 12Z" fill="currentcolor"/>
+                          <path d="M23 12C23 14.7614 22.5523 17 22 17C21.4477 17 21 14.7614 21 12C21 9.23858 21.4477 7 22 7C22.5523 7 23 9.23858 23 12Z" fill="currentcolor"/>
+                          <path d="M17 18C18.6569 18 20 15.3137 20 12C20 8.68629 18.6569 6 17 6C15.3431 6 14 8.68629 14 12C14 15.3137 15.3431 18 17 18Z" fill="currentcolor"/>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="col-12 col-lg-6 d-none d-md-inline">
-        <div class="row shows pb-2" data-controller="blogs" data-blogs-target="items" data-blogs-show-item-template-id="blog" data-blogs-items-value="1" data-blogs-offset-value="1">
-          {% include "templates/_blog.njk" %}
+      <div class="col-12 col-md-6 col-xl-4 pb-4">
+        <div class="row g-0 p-0">
+          <div class="col-12">
+            <h3>Mouche is back</h3>
+          </div>
+
+          <div class="col-12 col-sm-5 content pb-0">
+            <img src="images/shows/mouche.png" class="w-100" alt="Mouche with Frasher Hinchliffe"/>
+          </div>
+
+          <div class="col-12 col-sm-7 content">
+            <p>Fresh from supporting Gilles Peterson at the Golden Lion in Todmorden, Fraser Hinchlife returns with his Mouche show on Pattern Radio. 2 hours live of the finest Jazz, World, Soul and Blues.</p>
+            <p class="">Starting 7pm UTC Sunday 26th November</p>
+          </div>
         </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-xl-4">
+        <div class="episodes" id="latest" data-controller="episodes" data-episodes-show-item-template-id="episode-latest" data-episodes-title-value="listen to latest shows" data-episodes-items-value="2" data-episodes-show-tags-value="true">
+          <div class="heading d-flex" data-episodes-target="heading">
+            <h3 data-episodes-target="heading">Latest Shows</h3>
+            <button data-action="click->episodes#clearsearch" class="d-none">clear</button>
+          </div>
+          <div class="carousel slide" id="carouselexampleautoplaying" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+
+              <button type="button" data-bs-target="#carouselexampleindicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="slide 1"></button>
+              <button type="button" data-bs-target="#carouselexampleindicators" data-bs-slide-to="1" aria-label="slide 2"></button>
+            </div>
+            <div class="episodes carousel-inner" data-episodes-target="items"></div>
+
+          </div>
+        </div>
+        {% include "templates/episode/_latest.njk" %}
       </div>
     </div>
 
-    <div class="row my-3">
+    <div class="row">
       <div class="col-12 mb-5">
-        <div class="order-lg-1 episodes" id="episodes" data-controller="episodes" data-episodes-show-item-template-id="episode" data-episodes-filters-value="true" data-episodes-items-value="6" data-episodes-show-tags-value="true" data-episodes-search-value="true">
+        <div class="order-lg-1 episodes" id="episodes" data-controller="episodes" data-episodes-show-item-template-id="episode-standard" data-episodes-filters-value="true" data-episodes-items-value="6" data-episodes-offset-value="1" data-episodes-show-tags-value="true" data-episodes-search-value="true">
           <div class="heading d-flex" data-episodes-target="heading">
-            <h2 class="mb-3" data-episodes-target="heading">Recent Shows</h2>
-            <button data-action="click->episodes#clearSearch" class="d-none">clear</button>
+            {% include "templates/episodes/_title.njk" %}
           </div>
 
-          <h5>Press play button to listen</h5>
-          <div class="row shows" data-episodes-target="items"></div>
+          <p>Click show to load in player</p>
+          <div class="row episodes" data-episodes-target="items"></div>
           <a data-controller="navigation" data-action="click->navigation#navigate" class="nav-link" href="/browse">Browse all shows</a>
         </div>
 
-        {% include "templates/_episode.njk" %}
+        {% include "templates/episode/_standard.njk" %}
       </div>
-      
-      <div class="col-12 mb-5">
-        <div data-controller="schedule" data-schedule-show-item-template-id="schedule">
-          <div class="row shows" data-schedule-target="shows">
-            <h2 class="mb-3">Upcoming Shows</h2>
-            <h5>New shows to be streamed live soon</h5>
-          </div>
+    </div>
 
-          {% include "templates/_schedule.njk" %}
-
+    <div class="col-12 mb-5">
+      <div id="upcoming-shows" data-controller="schedule" data-schedule-show-item-template-id="schedule">
+        <div class="row episodes" data-schedule-target="episodes">
+          <h2 class="mb-3">Upcoming Shows</h2>
+          <h5>New shows to be streamed live soon</h5>
         </div>
+
+        {% include "templates/_schedule.njk" %}
+
       </div>
     </div>
   </div>
+</div>
 
 {% endblock %}
