apply consistent branding to show data

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -36,23 +36,31 @@
 {% block content %}
 
   <div class="container-fluid">
+    
 
     <div class="row row__orange pb-3 pb-md-0">
+      <div class="flex-fill">
+        <h1 style="color:#e8d7b9;">Musical selections and discovery for enlightened listening</h1>
+      </div>
 
       <div class="col-12 col-xl-4 pb-4">
+        
         <div class="d-flex flex-column">
-          <div class="flex-fill">
-            <h1 style="color:#e8d7b9;">Musical selections and discovery for enlightened listening</h1>
-          </div>
-
-          <div class="flex-fill" style="background-color:#f2f2f2;padding:20px;">
-            <h4>Now Streaming</h4>
+          <div class="flex-fill mb-3" style="background-color:#f2f2f2;padding:20px;">
+            <h4 class="fs-2">Streaming Now</h4>
             <div data-controller="stream" data-action="stream:update->status#update">
               {% include "partials/_stream.njk" %}
             </div>
+          </div>
 
-            <div class="row pt-3">
-              <div class="col col-md-6">
+          <div class="flex-fill" style="background-color:#f2f2f2;padding:20px;">
+
+            <div class="row pt-0">
+              <div data-controller="status">
+                <h4 class="mb-1">Next Show</h4>
+              <p data-status-target="track" class="mb-2">next</p>
+              </div>
+              {# <div class="col col-md-6">
                 <a href="#upcoming-shows" class="nav-link py-2 py-md-0" style="color:#1c1c1c;">Coming Soon</a>
                 <a data-controller="navigation" data-action="click->navigation#navigate" class="nav-link pb-2 pb-md-0" href="/browse" style="color:#1c1c1c;">Search Shows</a>
               </div>
@@ -93,7 +101,7 @@
                     </li>
                   </ul>
                 </div>
-              </div>
+              </div> #}
             </div>
           </div>
         </div>
@@ -101,27 +109,20 @@
 
       <div class="col-12 col-md-6 col-xl-4 pb-4">
         <div class="row g-0 p-0">
-          <div class="col-12">
-            <h3>Mouche is back</h3>
-          </div>
-
           <div class="col-12 col-sm-5 content pb-0">
-            <img src="images/shows/mouche.png" class="w-100" alt="Mouche with Frasher Hinchliffe"/>
+            <img src="images/shows/tropicaldisco.png" class="w-100" alt="Tropical Disco Goes Gospel"/>
           </div>
 
           <div class="col-12 col-sm-7 content">
-            <p>Fresh from supporting Gilles Peterson at the Golden Lion in Todmorden, Fraser Hinchlife returns with his Mouche show on Pattern Radio. 2 hours live of the finest Jazz, World, Soul and Blues.</p>
-            <p class="">Starting 7pm UTC Sunday 26th November</p>
+            <h4 class="fs-2">Tropical Disco</h4>
+            <p>Pattern Radio favourite hosted by Chris Holt. This time with guest mix from Greg Belson with his unique brand of funk fuelled gospel sounds.</p>
+            <p>Starts Friday 19th 6pm UTC.</p>
           </div>
         </div>
       </div>
 
       <div class="col-12 col-md-6 col-xl-4">
         <div class="episodes" id="latest" data-controller="episodes" data-episodes-show-item-template-id="episode-latest" data-episodes-title-value="listen to latest shows" data-episodes-items-value="2" data-episodes-show-tags-value="true">
-          <div class="heading d-flex" data-episodes-target="heading">
-            <h3 data-episodes-target="heading">Latest Shows</h3>
-            <button data-action="click->episodes#clearsearch" class="d-none">clear</button>
-          </div>
           <div class="carousel slide" id="carouselexampleautoplaying" data-bs-ride="carousel">
             <div class="carousel-indicators">
 
@@ -138,7 +139,7 @@
 
     <div class="row">
       <div class="col-12 mb-5">
-        <div class="order-lg-1 episodes" id="episodes" data-controller="episodes" data-episodes-show-item-template-id="episode-standard" data-episodes-filters-value="true" data-episodes-items-value="6" data-episodes-offset-value="1" data-episodes-show-tags-value="true" data-episodes-search-value="true">
+        <div class="order-lg-1 episodes" id="episodes" data-controller="episodes" data-episodes-show-item-template-id="episode-standard" data-episodes-filters-value="true" data-episodes-items-value="6" data-episodes-offset-value="0" data-episodes-show-tags-value="true" data-episodes-search-value="true">
           <div class="heading d-flex" data-episodes-target="heading">
             {% include "templates/episodes/_title.njk" %}
           </div>
