--- a/src/views/partials/_stream.njk
+++ b/src/views/partials/_stream.njk
@@ -1,6 +1,6 @@
 <div class="stream playable"  data-action="click->radio#play" data-url='https://embed.radio.co/player/b84cf70.html'>
 
-  <div data-stream-target="play" class="playable-button d-none pe-4">
+  <div data-stream-target="play" class="playable-button pe-4">
     <span class="button">
       <button></button>
     </span>
