--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -122,7 +122,7 @@
       </div>
 
       <div class="col-12 col-md-6 col-xl-4">
-        <div class="episodes" id="latest" data-controller="episodes" data-episodes-show-item-template-id="episode-latest" data-episodes-title-value="listen to latest shows" data-episodes-items-value="2" data-episodes-show-tags-value="true">
+        <div class="episodes" id="latest" data-controller="episodes" data-episodes-template-value="latest" data-episodes-show-item-template-id="episode-latest" data-episodes-title-value="listen to latest shows" data-episodes-items-value="2" data-episodes-show-tags-value="true">
           <div class="carousel slide" id="carouselexampleautoplaying" data-bs-ride="carousel">
             <div class="carousel-indicators">
 
@@ -133,7 +133,6 @@
 
           </div>
         </div>
-        {% include "templates/episode/_latest.njk" %}
       </div>
     </div>
 
@@ -148,8 +147,6 @@
           <div class="row episodes" data-episodes-target="items"></div>
           <a data-controller="navigation" data-action="click->navigation#navigate" class="nav-link" href="/browse">Browse all shows</a>
         </div>
-
-        {% include "templates/episode/_standard.njk" %}
       </div>
     </div>
 
