--- a/src/views/partials/episode/_default.njk
+++ b/src/views/partials/episode/_default.njk
@@ -1,5 +1,6 @@
 <div data-count="{{ data.episodes.count }}" data-episodes-target="count"></div>
-{% for item in data.episodes.items %}
+
+{% for item in data.episodes.items | reverse %}
   <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 playable episode card" data-url="https://www.mixcloud.com/widget/iframe/?hide_cover=1&autoplay=1&feed={{ item.key }}">
     <div class="image-container" data-action="click->radio#play">
       <img src="{{ item.pictures.large }}" alt="{{ item.name }}" class="card-img-top"/>
@@ -21,16 +22,28 @@
         <span>{{ timeToMinutes(item.audio_length) }} min</span>
       </div>
     </div>
+
     <div class="card-body">
-      <h5 class="card-title">
-        <a data-controller="navigation" data-action="click->navigation#navigate"  href="#" class="nav-link mb-1 fs-3" style="color:#1c1c1c"></a>
-      </h5>
+      {% set title = showData(item.name).title %}
+      {% if item.user.username === 'patternradio' %}
 
-      <h5 class="card-title">
-        <a data-controller="navigation" data-action="click->navigation#navigate"  href="{{ item.url }}" class="nav-link fs-6" style="color:#1c1c1c">{{ item.name }}</a>
-      </h5>
+        <h5 class="card-title">
+          <a data-controller="navigation" data-action="click->navigation#navigate" href="/episode/{{ item.slug }}" class="nav-link mb-1 fs-3">{{ showData(item.name).detail }}</a>
+        </h5>
 
-      <p class="card-text">{{item.user.name}}</p>
+        <h5 class="card-title">
+          {{showData(item.name).host}}
+
+        </h5>
+
+        <p class="card-text mb-1">
+          <a data-controller="navigation" data-action="click->navigation#navigate" href="/show/{{ showTitleId(title | trim) }}" class="nav-link fs-6">{{ showData(item.name).title }}</a>
+        </p>
+      {% else %}
+        <h5 class="card-title">{{ title }}</h5>
+        <p class="card-text">{{item.user.name}}</p>
+      {% endif %}
+
       <ul class="tags ps-0" data-action="click->episodes#tagsearch">
 
         {% for tag in item.tags %}
