--- a/src/views/partials/episode/_latest.njk
+++ b/src/views/partials/episode/_latest.njk
@@ -2,7 +2,7 @@
 
 {% for item in data.episodes.items %}
 
-<div class="playable episode mb-3 carousel-item{% if loop.first %} active{% endif %}" data-bs-interval="4000">
+<div class="playable episode mb-3 carousel-item{% if loop.first %} active{% endif %}" data-bs-interval="4000"  data-url="https://www.mixcloud.com/widget/iframe/?hide_cover=1&autoplay=1&feed={{ item.key }}">
   <div class="row g-0 p-0">
     <div class="col-12 col-sm-5 content pb-0">
       <div class="image-container w-100" data-action="click->radio#play">
@@ -28,14 +28,30 @@
     </div>
 
     <div class="col-12 col-sm-7 content">
-      <h5 class="card-title">
-        <a data-controller="navigation" data-action="click->navigation#navigate"  href="#" class="nav-link mb-1 fs-3" style="color:#1c1c1c"></a>
-      </h5>
+      
+      {% set title = showData(item.name).title %}
+      {% if item.user.username === 'patternradio' %}
 
-      <h5 class="card-title">
-        <a data-controller="navigation" data-action="click->navigation#navigate"  href="{{ item.url }}" class="nav-link fs-6" style="color:#1c1c1c">{{ item.name }}</a>
-      </h5>
-      <p class="card-text">{{item.user.name}}</p>
+        <h5 class="card-title">
+          <a data-controller="navigation" data-action="click->navigation#navigate" href="/episode/{{ item.slug }}" class="nav-link mb-1 fs-3">{{ showData(item.name).detail }}</a>
+        </h5>
+
+        <h5 class="card-title">
+          {{showData(item.name).host}}
+
+        </h5>
+
+        <p class="card-text mb-1">
+          <a data-controller="navigation" data-action="click->navigation#navigate" href="/show/{{ showTitleId(title | trim) }}" class="nav-link fs-6">{{ showData(item.name).title }}</a>
+        </p>
+
+        <p class="card-text">
+          <a data-controller="navigation" data-action="click->navigation#navigate" href="#" class="nav-link" style="color:#1c1c1c">More detail</a>
+        </p>
+      {% else %}
+        <h5 class="card-title">{{ title }}</h5>
+        <p class="card-text">{{item.user.name}}</p>
+      {% endif %}
 
       <ul class="tags ps-0" data-action="click->episodes#tagSearch">
         {% for tag in item.tags %}
@@ -45,9 +61,6 @@
         {% endfor %}
       </ul>
 
-      <p class="card-text">
-        <a data-controller="navigation" data-action="click->navigation#navigate" href="#" class="nav-link" style="color:#1c1c1c">More detail</a>
-      </p>
     </div>
   </div>
 </div>
